CSS/components/footer.css
.footer_container {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    height: 400px;
    background-color: black;
    color: white;
}

.icon-and-contact {
    padding-left: 100px;
    position: relative;
    text-align: left;
    font-size: large;
    margin: auto;
}

.footer .logo-image-footer {
    padding-left: 47px;
}

.icon-and-contact-container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
    margin: 0;
    padding: 0;
}


.logo-image-footer {
    height: 200px;
    width: auto;
    margin-bottom: -40px;
    padding-top: 0;
}

.footer_para_c1_line {
    margin: 20px;
    padding-bottom: 10px;
}

.footer_para_c1_line::after {
    content: '';
    position: absolute;
    height: 1px;
    width: 100%;
    background-color: white;
}

.footer_p {
    padding-left: 55px;
    width: 200%;
}

.contact-and-impressum-container {
    display: flex;
    justify-content: flex-end; 
    width: 100%; 
    padding-right: 100px; 
}

.contact-and-impressum {
    display: flex;
    flex-direction: column; 
    justify-items: center;
    list-style: none; 
    margin-top: auto;
    padding-top: 90px; 
}

.contact_button {
    width: 60px;
    height: auto;
    text-align: left;
    font-size: 2rem;
    background-color: rgba(0, 0, 0, 0);
    color: white;
    border: 0;
}

.contact_button:hover {
    cursor: pointer;
}

.footer_para_c1_line_contact_impressum {
    position: relative;
}

.footer_para_c1_line_contact_impressum::after {
    text-align: left;
    content: '';
    position: absolute;
    height: 1px;
    width: 100%;
    background-color: white;
}

.impressum_button {
    text-align: left;
    font-size: 2rem;
    background-color: rgba(0, 0, 0, 0);
    color: white;
    border: 0;
}

.impressum_button:hover {
    cursor: pointer;
}

.footer_p {
    color: white;
}
@media (max-width: 499px) {
    .footer_container {
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: column;
        height: 400px;
    }
    
    .icon-and-contact, .footer_p, .footer_para_c1_line, .contact-and-impressum-container, .impressum_button {
        width: 100%; 
        text-align: center; 
        display: flex;
        flex-direction: column;
        align-items: center;
        padding: 0; 
        margin: 0; 
    }

    .contact_button {
        width: 80px;
    }

    .contact-and-impressum {
        margin: 0;
        padding-left: 0;
        padding-top: 0;
        display: flex;
        align-items: center;
        padding-bottom: 20px;
    }

    .footer .logo-image-footer {
        width: 40%;
        text-align: center; 
        padding: 0; 
        margin: 0; 
    }

    .contact-and-impressum-container button {
        font-size: 1.5rem;
        font-weight: 300;;
    }

    .footer_para_c1_line_contact_impressum {
        display: none;
    }
    
    .footer_para_c1_line {
        display: none;
    }

    .footer_p {
        color: white;
        padding-bottom: 5px;
    }

    .contact-and-impressum-container {
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: column; 
        padding-right: 0;
    }
}

@media (min-width: 481px) and (max-width: 768px) {
    .footer {
        flex-direction: column;
        justify-content: center;
        height: 600px;
    }

    .footer .logo-image-footer {
        margin-top: 0;
        width: 50%;
        padding-left: 25%;
        padding-top: 5%;
        height: auto;
    }
    
    .icon-and-contact {
        position: relative;
        padding-left: 0;
        width: 100%;
    }

    .footer_p {
        text-align: center;
        padding-left: 0;
    }

    .footer_para_c1_line {
        margin-top: 0;
        padding-top: 0;
        padding-left: 0%;
    }

    .contact-and-impressum-container {
        justify-content: center;
        padding-top: 0;
    }

    .contact_button {
        text-align: center;
        font-size: 1rem;
    }

    .impressum_button {
        text-align: center;
        font-size: 1rem;
    }
}

